BitterNails/style.css
@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700&display=swap");

:root {
    --body-bg-color: #e4e6f5;
    --border-color: #e5e4e9;
    --theme-bg-color: #fff;
    --body-color: #1b1f31;
    --main-color: #7a7e9d;
    --main-light-color: #a1a4b9;
    --title-color: #979dc3;
    --body-font: "Jost", sans-serif;
    --button-bg-color: #eaeefc;
    --button-color: #4d76fd;
    --unselected-mail: #f1f2f7;
    --calendar-border-color: #cbcfe0;
    --main-container-bg: #f0f0f7;
}

* {
    outline: none;
    box-sizing: border-box;
}

html {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
}

body {
    font-family: var(--body-font);
    background-color: var(--body-bg-color);
    color: var(--body-color);
    font-size: 15px;
}

img {
    max-width: 100%;
}

.parent-main-container {
    background-color: var(--theme-bg-color);
    display: flex;
    height: 100vh;
    overflow: hidden;
    margin: 0 auto;
}

.user-profile-area {
    width: 360px;
    border-right: 1px solid var(--border-color);
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    overflow: auto;
}

.task-manager {
    font-size: 15px;
    color: var(--title-color);
    font-weight: 700;
    text-align: center;
    height: 70px;
    letter-spacing: 0.7px;
    line-height: 70px;
    position: sticky;
    top: 0;
    z-index: 3;
    text-transform: uppercase;
    background-color: var(--theme-bg-color);
    border-bottom: 1px solid var(--border-color);
}

.user-photo {
    width: 70px;
    height: 70px;
    border-radius: 50%;
    object-fit: cover;
}

.user-name {
    font-weight: 600;
    margin: 15px 0 8px;
}

.user-mail {
    color: var(--main-light-color);
    font-size: 12px;
    font-weight: 600;
}

.user-profile {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
}

.side-wrapper {
    padding: 25px 40px;
    border-bottom: 1px solid var(--border-color);
}

.side-wrapper:last-child {
    border-bottom: none;
}

.user-notification {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;
}

.user-notification svg {
    width: 36px;
    padding: 10px;
    flex-shrink: 0;
    border-radius: 50%;
    overflow: visible;
    background-color: var(--button-bg-color);
    color: var(--button-color);
}

.notify {
    position: relative;
}

.notify:not(:last-child) {
    margin-right: 25px;
}

.notify.alert {
    position: relative;
}

.notify.alert:before {
    content: "2";
    font-size: 9px;
    font-weight: 700;
    position: absolute;
    background-color: #ff537b;
    width: 14px;
    height: 14px;
    border-radius: 50%;
    top: -3px;
    display: flex;
    justify-content: center;
    align-items: center;
    right: 0px;
    color: #fff;
}

.notify.alert:last-child:before {
    content: "5";
}

.progress {
    margin-top: 5px;
    border-radius: 4px;
    background-color: #e7e7ef;
    height: 8px;
    overflow: hidden;
}

.progress-bar {
    background-color: var(--button-color);
    border-radius: 4px;
    width: 12.5%;
    height: 100%;
    animation: progressAnimation 6s;
    transition: 0.3s linear both;
    transition-property: width, background-color;
}

.progress-status {
    margin-top: 30px;
    text-align: right;
    color: var(--main-color);
    font-size: 10px;
    font-weight: 600;
}

@keyframes progressAnimation {
    0% {
        width: 0%;
        background-color: #a2b6f5;
    }

    100% {
        width: 12.5%;
    }
}

.task-status {
    margin-top: 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.task-stat {
    text-align: center;
}

.task-number {
    font-size: 17px;
    font-weight: 700;
    margin-bottom: 10px;
}

.task-condition {
    font-size: 12px;
    color: var(--main-color);
    font-weight: 700;
}

.task-tasks {
    margin-top: 4px;
    font-size: 10px;
    font-weight: 600;
    color: var(--main-light-color);
}

.project-title {
    text-transform: uppercase;
    font-weight: 700;
    margin-bottom: 18px;
}

.project-department {
    position: relative;
    vertical-align: middle;
    padding: 0 30px;
    color: var(--main-color);
    font-size: 13px;
    font-weight: 600;
    margin-top: 14px;
}

.project-department:before {
    position: absolute;
    content: "";
    width: 8px;
    height: 8px;
    border-radius: 50%;
    top: 10;
    left: 0;
}

.project-department:nth-child(1):before {
    border: 3px solid #b36dfb;
}

.project-department:nth-child(2):before {
    border: 3px solid #625be8;
}

.project-department:nth-child(3):before {
    border: 3px solid #fec267;
}

.project-department:nth-child(4):before {
    border: 3px solid #fc6679;
}

.members {
    width: 36px;
    height: 36px;
    object-fit: cover;
    border-radius: 50%;
}

.team-member {
    display: flex;
    justify-content: space-between;
}

.main-area {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    overflow: hidden;
}

.header {
    height: 70px;
    width: 100%;
    border-bottom: 1px solid var(--border-color);
}

.search-bar {
    height: 70px;
    position: relative;
}

.search-bar input {
    height: 100%;
    width: 100%;
    display: block;
    background-color: transparent;
    border: none;
    color: var(--body-color);
    padding: 0 35px;
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23a1a4b9' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='feather feather-search'%3e%3ccircle cx='11' cy='11' r='8'/%3e%3cpath d='M21 21l-4.35-4.35'/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-size: 18px;
    background-position: 0 50%;
    font-family: var(--body-font);
    font-weight: 600;
    font-size: 14px;
}

.search-bar input::placeholder {
    color: var(--main-light-color);
}
/* ... */

